# walnutpi.npu

./: .gitignore  MANIFEST.in  Makefile  README.md  install  pyproject.toml  setup.py
NPU/: Makefile  README_PY.md  py_awnn_lib.c  setup.py
NPU/header/: awnn_internal.h  vip_lite_common.h
NPU/src/: awnn_quantize.c
NPU/walnutpi/: YOLO11.py
NPU/walnutpi_npu/: NPU.py  YOLO11.py
example/YOLO11/cls/: cls-camera.py  cls-picture.py  dataset_ImageNet.py
example/YOLO11/cls/model/: pt2onnx.py  yolo11n-cls.nb
example/YOLO11/detect/: detect-camera.py  detect-picture.py
example/YOLO11/detect/model/: pt2onnx.py  yolo11n.nb
example/YOLO11/obb/: dataset_dota.py  obb-picture.py
example/YOLO11/obb/model/: pt2onnx.py
example/YOLO11/pose/: pose-camera.py  pose-picture.py
example/YOLO11/pose/model/: pt2onnx.py  yolo11n-pose.nb
example/YOLO11/seg/: dataset_coco.py  seg-camera.py  seg-picture.py
example/YOLO11/seg/model/: pt2onnx.py  yolo11n-seg.nb
walnutpi_npu/: NPU.py
walnutpi_npu/_awnn_lib/t527/: Makefile
walnutpi_npu/_awnn_lib/t527/header/: awnn_lib.h  vip_lite.h
walnutpi_npu/_awnn_lib/t527/src/: awnn_lib.c
